CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_FORCE_INLINES")
SET(CMAKE_MODULE_PATH ${CMAKE_INSTALL_PREFIX}/lib/cmake/)

PROJECT(mpiSfM)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE( MPI REQUIRED )
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})

# 3rdparty Libraries
ADD_SUBDIRECTORY(3rdparty/vlfeat_sift)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/3rdparty)
ADD_SUBDIRECTORY(src/mpiSfM)

ADD_EXECUTABLE(key_demo examples/extract_keypoints.cpp)
TARGET_LINK_LIBRARIES(key_demo mpiSfM)
